<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unit Converter</string>
    <string name="action_about">About</string>
    <string name="conversion_type">Conversion Type</string>
    <string name="conversion">Conversion</string>
    <string name="enter_a_value">Enter a value</string>
    <string name="to">To</string>
    <string name="result">Result</string>
    <string name="clear">Clear</string>
    <string name="calculate">Calculate</string>
    <string name="version">Unit Converter 1.0</string>
    <string name="email">Email: iftekhersunny@hotmail.com</string>
	<string name="newline">&#xD;&#xA;</string>
	<string name="copyright">Copyright © 2014 SUN Apps&#xD;&#xA;All Right Reserved</string>
	<string name="action_exit">Exit</string>
	<string name="action_createShortcut">Create Shortcut</string>
	<string name="action_removeShortcut">Remove Shortcut</string>
	<string name="about_info">Bug reports and feature suggestions are welcome.</string>
	
</resources>


