<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/gradientbg"
    android:padding="10dp"
    
    >

    <TextView
        android:id="@+id/mainOptiontxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversion_type"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="5dp" 
        android:textStyle="bold"
        android:textColor="#2aa4cd"/>

    <Spinner
        android:id="@+id/mainOptionspn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:scrollbars="vertical" /> 

    <TextView
        android:id="@+id/subOptiontxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/conversion"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:textColor="#2aa4cd" /> 
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/sunOption1spn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbars="vertical" />

        <EditText
            android:id="@+id/subOption1txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="" 
            android:hint="@string/enter_a_value"/>
    </LinearLayout>

    <TextView
        android:id="@+id/convertTotx"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="5dp" 
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/subOption2spn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbars="vertical"/>

        <EditText
            android:id="@+id/subOption2txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned"
            android:hint="@string/result"
            android:enabled="false"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/clearbtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"           
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:textSize="18sp"
			android:textStyle="bold"
			android:layout_margin="15dp"
			android:layout_gravity="center"
			android:gravity="center"
			android:textAlignment="center" 
            android:text="@string/clear" />

        <Button
            android:id="@+id/calculatebtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:textSize="18sp"
			android:textStyle="bold"
			android:layout_margin="15dp"
			android:layout_gravity="center"
			android:gravity="center"
            android:text="@string/calculate"
            android:textAlignment="center" />
    </LinearLayout>


</LinearLayout>